--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
       rel="stylesheet"
     />
 
-    <title>React App</title>
+    <title>NTNUI Padling</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
